about page: fix project caption overflowing bug

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -244,10 +244,6 @@ img.postthumbnail {
   /* filter: brightness(50%); */
 }
 
-.carousel-caption h5 p {
-  color: #000;
-}
-
 .bg-slightly-dark {
   background-color: #d6d6d6;
 }
